WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163792
WebGL2RenderingContext.texSubImage3D() should use a union instead of overloading
https://bugs.webkit.org/show_bug.cgi?id=163792
Summary
WebGL2RenderingContext.texSubImage3D() should use a union instead of overloading
Chris Dumez
Reported
2016-10-21 09:48:47 PDT
WebGL2RenderingContext.texSubImage3D() should use a union instead of overloading for -
https://www.khronos.org/registry/webgl/specs/latest/2.0/#3.7
(for texSubImage3D) -
https://www.khronos.org/registry/webgl/specs/latest/1.0/#5.14
(for TexImageSource) TexImageSource is defined as: typedef (ImageBitmap or ImageData or HTMLImageElement or HTMLCanvasElement or HTMLVideoElement) TexImageSource;
Attachments
Patch
(7.52 KB, patch)
2016-10-21 09:50 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-10-21 09:50:12 PDT
Created
attachment 292358
[details]
Patch
WebKit Commit Bot
Comment 2
2016-10-21 10:58:54 PDT
Comment on
attachment 292358
[details]
Patch Clearing flags on attachment: 292358 Committed
r207685
: <
http://trac.webkit.org/changeset/207685
>
WebKit Commit Bot
Comment 3
2016-10-21 10:58:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug